# python-poetry-vs-code-base

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.sh
tests/: test_python_poetry_vs_code_base.py
