[tool.poetry]
name = "python-poetry-vs-code-base"
version = "0.1.0"
description = ""
authors = ["Tim Baumgärtner"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
pytest-coverage = "^0.0"
pytest-cov = "^2.8.1"
rope = "^0.17.0"
flake8-annotations = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
